Bug 195459 - REGRESSION(r242624): [GTK] New rAF code path assumes AC mode
Summary: REGRESSION(r242624): [GTK] New rAF code path assumes AC mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-08 06:27 PST by Philippe Normand
Modified: 2019-03-11 10:21 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.67 KB, patch)
2019-03-08 06:31 PST, Philippe Normand
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2019-03-08 06:27:42 PST
.
Comment 1 Philippe Normand 2019-03-08 06:31:22 PST
Created attachment 364008 [details]
Patch
Comment 2 Said Abou-Hallawa 2019-03-08 09:33:01 PST
Thanks for taking care of this issue.

This work is part of "Update the rendering" step of the HTML Event Loop specification  <https://html.spec.whatwg.org/multipage/webappapis.html#update-the-rendering>. So getting the integration part right will benefit all ports and make the event loop work a lot easier.
Comment 3 WebKit Commit Bot 2019-03-08 10:13:35 PST
Comment on attachment 364008 [details]
Patch

Clearing flags on attachment: 364008

Committed r242643: <https://trac.webkit.org/changeset/242643>
Comment 4 WebKit Commit Bot 2019-03-08 10:13:37 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Ryan Haddad 2019-03-11 10:21:11 PDT
I reverted the breaking change along with this fix in https://trac.webkit.org/r242714