REGRESSION(r242624): [GTK] New rAF code path assumes AC mode https://bugs.webkit.org/show_bug.cgi?id=195459

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2019-03-08
Reviewed by Žan Doberšek.

* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::scheduleCompositingLayerFlush):
The refresh monitor now calls scheduleLayerFlush() but when AC
mode is disabled this method does nothing, so setNeedsDisplay()
needs to be called instead.

Canonical link: https://commits.webkit.org/209781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242643 268f45cc-cd09-0410-ab3c-d52691b4dbfc